interpreter/examples/good/simple/lambda.dl
// simple use of lambdas
{
    function f(fun g) print g(0),
    int x.
    x = f(lambda (x): return x+1)
}
