interpreter/examples/bad/type/function2.dl
{
    function f(fun g) return g(1),
    int x.
    x = f(1)
}
